# hamal_agv

./: .gitignore  LICENSE  README.md  dependencies.md  environment.yml  requirements.txt
docker/: Dockerfile  Dockerfile.pi  compose.pi.yml  compose.yml
ros2_ws/src/hamals_bringup/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/hamals_bringup/config/: robot_io.yaml
ros2_ws/src/hamals_bringup/launch/: navigation_bringup.launch.py  robot_io_bringup.launch.py  slam_bringup.launch.py
ros2_ws/src/hamals_bringup/rviz/: rviz2_config.rviz
ros2_ws/src/hamals_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/hamals_lidar_toolbox/: CMakeLists.txt  package.xml
ros2_ws/src/hamals_lidar_toolbox/config/: lidar.yaml
ros2_ws/src/hamals_localization/: setup.py
ros2_ws/src/hamals_localization/config/: ekf.yaml
ros2_ws/src/hamals_localization/launch/: ekf.launch.py
ros2_ws/src/hamals_robot_description/: README.md  package.xml  requirements-system.md  setup.py
ros2_ws/src/hamals_robot_description/config/: robot_dimensions.yaml
ros2_ws/src/hamals_robot_description/launch/: display.launch.py  gazebo.launch.py
ros2_ws/src/hamals_robot_description/scripts/: generate_gazebo_model.py  hamals_gazebo.sh
ros2_ws/src/hamals_robot_description/urdf/: base.xacro  (+7 more)
ros2_ws/src/hamals_ui/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/hamals_ui/config/: bridge.yaml  panels.yaml  params.yaml  scenario.yaml  topology.yaml
ros2_ws/src/hamals_ui/hamals_ui/: ui_bridge_node.py
ros2_ws/src/hamals_ui/launch/: ui.launch.py
ros2_ws/src/hamals_ui/web/: index.html  package-lock.json  package.json  vite.config.js
ros2_ws/src/hamals_ui/web/src/: App.vue  main.js
ros2_ws/src/hamals_ui/web/src/components/: Card.vue  LabelRow.vue  MiniMap.vue  SectionTitle.vue  SidebarNav.vue  StatPill.vue  TabCamera.vue  TabDashboard.vue  TabErrors.vue  TabManual.vue  TabMap.vue  TabMission.vue  TabSettings.vue  TopBar.vue
ros2_ws/src/hamals_ui/web/src/composables/: useMockData.js  useRosbridge.js
scripts/: aliases.sh  build.sh  setup_ros2.sh
(+12 files in other folders)
