<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hamals_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for HAMALS robot orchestration.</description>
  <maintainer email="m_gnr@icloud.com">m-gnr</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>

  <exec_depend>hamals_serial_bridge</exec_depend>
  <exec_depend>hamals_localization</exec_depend>
  <exec_depend>hamals_robot_description</exec_depend>
  <exec_depend>hamals_navigation</exec_depend>
  <exec_depend>hamals_slam</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>